spacing issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .main-content{
-    margin: 50px 300px;
+    margin: 50px 200px;
 }
 
 a:hover {
